--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -20,18 +20,19 @@ Richard Corben<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg" title="Den 1 Neverwhere"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg" title="Bat Out of Hell"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt5.jpg" title="Twisted Tales #3"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt0.jpg" title="Den HeavyMetal Movie (1981)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg" title="Den 1 Neverwhere (1978)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg" title="Bat Out of Hell (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt3.jpg" title="John Carter of Mars"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg" title="Annual Worlds Best SF (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt5.jpg" title="Twisted Tales #3 (1983)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg" title="Hot Stuf' #3 (1976)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg" title="Hot Stuf' #5 (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt10.jpg" title="Fantagor (1982)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt11.jpg" title="Fantagor (1983)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt14.jpg"></div>
@@ -48,6 +49,18 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt26.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt28.jpg" title="John Carter of Mars (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt29.jpg" title="Tarzan"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt30.jpg" title="Rat God #1 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt31.jpg" title="Rat God #2 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt32.jpg" title="Rat God #3 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt33.jpg" title="Rat God #4 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt34.jpg" title="Rat God #5 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt35.jpg" title="Weirdom (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt36.jpg" title="Eclipse (1986)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt37.jpg" title="Last Gasp (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt38.jpg" title="Last Gasp (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt39.jpg" title="Last Gasp (1972)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -59,7 +72,7 @@ After working as a professional animator, Corben started doing underground comic
 </p><p>
 His stories appeared in Creepy, Eerie, Vampirella, 1984 and Comix International. He also colored several episodes of Will Eisner's Spirit. All the stories and covers he did for Creepy and Eerie have been reprinted by Dark Horse Books in a single volume: Creepy Presents Richard Corben. The three stories he drew for Vampirella have been reprinted by Dynamite Entertainment in Vampirella Archives Vol. 5.
 </p><p>
-In 1976 Richard illustrated "Bloodstar" oublished by The Morning Star Press. Bloodstar is the first graphic novel to call itself a graphic novel (in its introduction and dust jacket), it was based on a short story by Robert E. Howard, the creator of Conan the Barbarian.
+In 1976 Richard illustrated "Bloodstar" published by The Morning Star Press. Bloodstar is the first graphic novel to call itself a graphic novel (in its introduction and dust jacket), it was based on a short story by Robert E. Howard, the creator of Conan the Barbarian.
 </p><p>
 Corben did the cover of the debut studio album by American rock singer Meat Loaf "Bat Out of Hell". It is one of the best-selling albums of all time, having sold over 43 million copies worldwide.
 </p><p>
@@ -120,7 +133,7 @@ During this time he also contributed to other publications such as <a href="../V
 <td>Fantagor Press</td>
 </tr>
 <tr>
-<td>Rowlf</td>
+<td>Rowolf</td>
 <td>1970</td>
 <td>Corben</td>
 <td>Voice of Comicdon</td>
