--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -33,34 +33,37 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt10.jpg" title="Fantagor (1982)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt11.jpg" title="Fantagor (1983)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt25.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt26.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg" title="First Graphic Novel, The Morning Star Press (1976)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt14.jpg" title="Fantagor (1990)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt15.jpg" title="Fantagor (1990)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt16.jpg" title="Fantagor (1990)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt17.jpg" title="Fantagor (1990)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt18.jpg" title="Fantagor (1990)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt19.jpg" title="Fantagor (1993)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt20.jpg" title="Fantagor (1987)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt21.jpg" title="Fantagor (1987)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt22.jpg" title="Fantagor (1987)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt23.jpg" title="Fantagor (1994)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt24.jpg" title="Fantagor (1991)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt25.jpg" title="Fantagor (1991)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt26.jpg" title="Fantagor (1991)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt27.jpg" title="Fantagor (1991)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt28.jpg" title="John Carter of Mars (1977)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt29.jpg" title="Tarzan"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt30.jpg" title="Rat God #1 (2015)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt31.jpg" title="Rat God #2 (2015)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt32.jpg" title="Rat God #3 (2015)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt33.jpg" title="Rat God #4 (2015)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt34.jpg" title="Rat God #5 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt29.jpg" title="Tarzan Chance Meeting (1974)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt30.jpg" title="Dark Horse #1 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt31.jpg" title="Dark Horse #2 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt32.jpg" title="Dark Horse #3 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt33.jpg" title="Dark Horse #4 (2015)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt34.jpg" title="Dark Horse #5 (2015)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt35.jpg" title="Weirdom (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt36.jpg" title="Eclipse (1986)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt37.jpg" title="Last Gasp (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt38.jpg" title="Last Gasp (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt39.jpg" title="Last Gasp (1972)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt40.jpg" title="Pacific Comics (1984)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt41.jpg" title="Catalan (1985)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt42.jpg" title="Catalan (1985)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt43.jpg" title="Catalan (1985)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
