--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -94,7 +94,7 @@ During this time he also contributed to other publications such as <a href="../V
 </thead>
 <tbody>
 <tr>
-    <td>The Plague</td>
+    <td>Tales from the Plague</td>
 	<td>1969</td>
 	<td>Dennis Cunningham</td>
 	<td>Weirdom</td>
@@ -103,7 +103,7 @@ During this time he also contributed to other publications such as <a href="../V
     <td>Dead Hill</td>
     <td>1969</td>
 	<td>Corben</td>
-	<td></td>
+	<td>Weirdcom</td>
   </tr>
   <tr>
     <td>Monsters Rule</td>
