--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -74,6 +74,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt48.jpg" title="Fantagor (1987)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt49.jpg" title="Fantagor (1987)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt50.jpg" title="Razar the Unhero (1970)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt51.jpg" title="Horrible Harvey's House, Last Gasp (1971)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
