--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -75,6 +75,12 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt49.jpg" title="Fantagor (1987)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt50.jpg" title="Razar the Unhero (1970)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt51.jpg" title="Horrible Harvey's House, Last Gasp (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt52.jpg" title="Up From The Deep, Rip Off (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt53.jpg" title="Catalan (1984)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt54.jpg" title="Subterranean Press (1980)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt55.jpg" title="TNMT #33, Mirage Studios (1984)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt56.jpg" title="Rip Off Press (1970)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt57.jpg" title="Rip Off Press (1970)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -104,56 +110,16 @@ During this time he also contributed to other publications such as <a href="../V
 </tr>
 </thead>
 <tbody>
-<tr>
-    <td>Tales from the Plague</td>
-	<td>1969</td>
-	<td>Dennis Cunningham</td>
-	<td>Weirdom</td>
-  </tr>
-  <tr>
-    <td>Dead Hill</td>
-    <td>1969</td>
-	<td>Corben</td>
-	<td>Weirdom</td>
-  </tr>
-  <tr>
-    <td>Monsters Rule</td>
-	<td>1969</td>
-	<td>Corben</td>
-	<td>Weirdom</td>
-  </tr>
-  <tr>
-    <td>Razar the Unhero</td>
-	<td>1970</td>
-	<td>Herb Arnold</td>
-	<td>Rip Off Press</td>
-  </tr>
-    <tr>
-    <td>Horrible Harvey's House</td>
-	<td>1970</td>
-	<td>Corben</td>
-	<td>Last Gasp</td>
-</tr>
-<tr>
-<td>When Dreams Collide</td>
-<td>1970</td>
-<td>Corben</td>
-<td>Last Gasp</td>
-</tr>
-<tr>
-<td>Twighlight of the Dogs</td>
-<td>1970</td>
-<td>Corben</td>
-<td>Fantagor Press</td>
-</tr>
-<tr>
-<td>Rowolf</td>
-<td>1970</td>
-<td>Corben</td>
-<td>Voice of Comicdon</td>
-</tr>
-<tr><td>Oteg</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Gastric Fortitude</td><td>1970</td><td>Corben</td><td>Kitchen Sink</td></tr>
+<tr><td>Tales from the Plague</td><td>1969</td><td>Dennis Cunningham</td><td>Weirdom</td></tr>
+<tr><td>Dead Hill (Weirdom #14)</td><td>1969</td><td>Corben</td><td>Weirdom</td></tr>
+<tr><td>Monsters Rule (Weirdom #15)</td><td>1969</td><td>Corben</td><td>Weirdom</td></tr>
+<tr><td>Razar the Unhero (Fantagor #1)</td><td>1970</td><td>Herb Arnold</td><td>Rip Off Press</td></tr>
+<tr><td>Horrible Harvey's House</td><td>1970</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>When Dreams Collide (Up From the Deep#1) </td><td>1970</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>Twilight of the Dogs (Fantagor #1)</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Rowlf</td><td>1970</td><td>Corben</td><td>Rip Off Press</td></tr>
+<tr><td>Oteg (Children of Fire #2)</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Gastric Fortitude (Death Rattle #1)</td><td>1970</td><td>Corben</td><td>Kitchen Sink</td></tr>
 <tr><td>Inna Pit</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Frozen Beauty</td><td>1970</td><td>Corben</td><td>Warren</td></tr>
 <tr><td>Cidopey</td><td>1971</td><td>Corben</td><td>Rip Off Press</td></tr>
@@ -227,7 +193,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Woman Scorned</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>Ogre</td><td>1978</td><td>Richard Corben</td><td>Warren</td></tr>
 <tr><td>The Bodyssey</td><td>1979</td><td>John Pocsik</td><td>HM- Fantagor Press</td></tr>
-<tr><td>Blood's a Rover illustrations</td><td>1980</td><td>Harlan Ellison</td><td>paperback</td></tr>
+<tr><td>Blood's A Rover cover</td><td>1980</td><td>Harlan Ellison</td><td>Subterranean Press</td></tr>
 <tr><td>Jeremy Brood</td><td>1982</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Mutant World</td><td>1982</td><td>Jan Strnad</td><td>Warren-Fantagor Press</td></tr>
 <tr><td>Muvovum</td><td>1983</td><td>Corben</td><td>Fantagor Press-HM</td></tr>
@@ -235,6 +201,8 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Fur Trade</td><td>1984</td><td>John Pocsik</td><td>Fantagor Press</td></tr>
 <tr><td>Infected</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
 <tr><td>Rex 'n' Me</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
+<tr><td>Werewolf</td><td>1984</td><td>John Pocsik</td><td>Catalan</td></tr>
+<tr><td>TNMT #33</td><td>1984</td><td>Jan Strnad</td><td>Mirage Studios</td></tr>
 <tr><td>Night of the Monkey</td><td>1985</td><td>John Pocsik</td><td>Eclipse Comics</td></tr>
 <tr><td>X-men for Ethiopia</td><td>1985</td><td>Alan Moore</td><td>Marvel</td></tr>
 <tr><td>Spirit of the Beast</td><td>1985</td><td>Corben</td><td>Heavy Metal</td></tr>
@@ -243,6 +211,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Children of Fire</td><td>1987</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Vic and Blood</td><td>1987</td><td>Harlan Ellison</td><td>Mad Dog</td></tr>
 <tr><td>Den</td><td>1988</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Last Voyage of Sinbad</td><td>1988</td><td>Corben</td><td>Titan Books</td></tr>
 <tr><td>The Fall of the House of Usher</td><td>1989</td><td>Edgar Allan Poe</td><td>Pacific comics</td></tr>
 <tr><td>Such Pretty Little Toes</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Wreck of the Katera Dan</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
