--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -81,6 +81,11 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt55.jpg" title="TNMT #33, Mirage Studios (1984)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt56.jpg" title="Rip Off Press (1970)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt57.jpg" title="Rip Off Press (1970)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt58.jpg" title="Creepy #36, Warren (1970)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt59.jpg" title="Warren (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt60.jpg" title="Anomaly #4, Bud Plant (1974)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt61.jpg" title="Last Gasp (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt62.jpg" title="Eerie #32, Warren (1971)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -114,21 +119,21 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Dead Hill (Weirdom #14)</td><td>1969</td><td>Corben</td><td>Weirdom</td></tr>
 <tr><td>Monsters Rule (Weirdom #15)</td><td>1969</td><td>Corben</td><td>Weirdom</td></tr>
 <tr><td>Razar the Unhero (Fantagor #1)</td><td>1970</td><td>Herb Arnold</td><td>Rip Off Press</td></tr>
-<tr><td>Horrible Harvey's House</td><td>1970</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>Horrible Harvey's House (Skull #3)</td><td>1970</td><td>Corben</td><td>Last Gasp</td></tr>
 <tr><td>When Dreams Collide (Up From the Deep#1) </td><td>1970</td><td>Corben</td><td>Last Gasp</td></tr>
 <tr><td>Twilight of the Dogs (Fantagor #1)</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Rowlf</td><td>1970</td><td>Corben</td><td>Rip Off Press</td></tr>
 <tr><td>Oteg (Children of Fire #2)</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Gastric Fortitude (Death Rattle #1)</td><td>1970</td><td>Corben</td><td>Kitchen Sink</td></tr>
-<tr><td>Inna Pit</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Frozen Beauty</td><td>1970</td><td>Corben</td><td>Warren</td></tr>
-<tr><td>Cidopey</td><td>1971</td><td>Corben</td><td>Rip Off Press</td></tr>
-<tr><td>To Spear a Fair Maiden</td><td>1971</td><td>Jan Strnad</td><td>Last Gasp</td></tr>
-<tr><td>Encounter at War</td><td>1971</td><td>Jan Strnad</td><td>Bud Plant</td></tr>
-<tr><td>Dumb Story</td><td>1971</td><td>Corben</td><td>Last Gasp</td></tr>
-<tr><td>Bookworm</td><td>1971</td><td>Jerry Conway</td><td>Warren</td></tr>
-<tr><td>Golden Sun Disk of the Incas</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
-<tr><td>Astrology</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
+<tr><td>Inna Pit (Fantagor #1)</td><td>1970</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Frozen Beauty (Creepy #36)</td><td>1970</td><td>Corben</td><td>Warren</td></tr>
+<tr><td>Cidopey (Up from the Deep #1)</td><td>1971</td><td>Corben</td><td>Rip Off Press</td></tr>
+<tr><td>To Spear a Fair Maiden (Fantagor #2)</td><td>1971</td><td>Jan Strnad</td><td>Last Gasp</td></tr>
+<tr><td>Encounter at War (Anomaly #4)</td><td>1971</td><td>Jan Strnad</td><td>Bud Plant</td></tr>
+<tr><td>Dumb Story (Slow Death #3)</td><td>1971</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>Bookworm (Eerie #32)</td><td>1971</td><td>Jerry Conway</td><td>Warren</td></tr>
+<tr><td>Golden Sun Disk of the Incas (Creepy #43)</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
+<tr><td>Astrology (Creepy #44)</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
 <tr><td>Tangible Hatred</td><td>1971</td><td>Donald McGregor</td><td>Warren</td></tr>
 <tr><td>The Pest</td><td>1971</td><td>Steven Skeates</td><td>Warren</td></tr>
 <tr><td>Beast of Wolfton</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
@@ -188,6 +193,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Years and Mind Forever</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>You're A Big Girl Now</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>Instinct</td><td>1977</td><td>Nick Cuti</td><td>Warren</td></tr>
+<tr><td>The Odd Comic World of Richard Corben</td><td>1977</td><td>Corben</td><td>Warren</td></tr>
 <tr><td>NeverWhere</td><td>1978</td><td>Corben</td><td>Fantagor Press-HM</td></tr>
 <tr><td>New Tales of the Arabian Nights</td><td>1978</td><td>Jan Strnad</td><td>HM-Fantagor Press</td></tr>
 <tr><td>Woman Scorned</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
