--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -86,6 +86,8 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt60.jpg" title="Anomaly #4, Bud Plant (1974)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt61.jpg" title="Last Gasp (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt62.jpg" title="Eerie #32, Warren (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt63.jpg" title="Grim Wit #1, Rip Off (1971)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt64.jpg" title="Fever Dreams #1, Rip Off (1972)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -134,14 +136,14 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Bookworm (Eerie #32)</td><td>1971</td><td>Jerry Conway</td><td>Warren</td></tr>
 <tr><td>Golden Sun Disk of the Incas (Creepy #43)</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
 <tr><td>Astrology (Creepy #44)</td><td>1971</td><td>T. Casey Brennan</td><td>Warren</td></tr>
-<tr><td>Tangible Hatred</td><td>1971</td><td>Donald McGregor</td><td>Warren</td></tr>
-<tr><td>The Pest</td><td>1971</td><td>Steven Skeates</td><td>Warren</td></tr>
-<tr><td>Beast of Wolfton</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
-<tr><td>Gothic Tale</td><td>1972</td><td>Tom Vietch</td><td>Last Gasp</td></tr>
-<tr><td>Kittens for Christian</td><td>1972</td><td>Jan Strnad</td><td>Last Gasp</td></tr>
-<tr><td>Space Jacked</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
-<tr><td>The Temple</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
-<tr><td>To Meet the Faces you Meet</td><td>1972</td><td>Jan Strnad</td><td>Kitchen Sink</td></tr>
+<tr><td>Tangible Hatred (Creepy #41)</td><td>1971</td><td>Donald McGregor</td><td>Warren</td></tr>
+<tr><td>The Pest (Eerie #33)</td><td>1971</td><td>Steven Skeates</td><td>Warren</td></tr>
+<tr><td>Beast of Wolfton (Grim Wit #1)</td><td>1972</td><td>Corben</td><td>Rip Off</td></tr>
+<tr><td>Gothic Tale (SKull #6)</td><td>1972</td><td>Tom Vietch</td><td>Last Gasp</td></tr>
+<tr><td>Kittens for Christian (Fantagor #3)</td><td>1972</td><td>Jan Strnad</td><td>Last Gasp</td></tr>
+<tr><td>Space Jacked (Fantagor #4)</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>The Temple (Fantagor #3)</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>To Meet the Faces you Meet (Fever Dreams #1)</td><td>1972</td><td>Jan Strnad</td><td>Kitchen Sink</td></tr>
 <tr><td>Going Home</td><td>1972</td><td>Corben</td><td>Funnybook</td></tr>
 <tr><td>Dome Battle</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Bull Digger</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
