--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -88,6 +88,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt62.jpg" title="Eerie #32, Warren (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt63.jpg" title="Grim Wit #1, Rip Off (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt64.jpg" title="Fever Dreams #1, Rip Off (1972)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt65.jpg" title="Creepy #132, Warren (1972)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -144,16 +145,16 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Space Jacked (Fantagor #4)</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
 <tr><td>The Temple (Fantagor #3)</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
 <tr><td>To Meet the Faces you Meet (Fever Dreams #1)</td><td>1972</td><td>Jan Strnad</td><td>Kitchen Sink</td></tr>
-<tr><td>Going Home</td><td>1972</td><td>Corben</td><td>Funnybook</td></tr>
-<tr><td>Dome Battle</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Bull Digger</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Rats in the Walls</td><td>1972</td><td>Lovecraft-Corben</td><td>Last Gasp</td></tr>
-<tr><td>Necromancer</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Melton's Big Game</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
-<tr><td>Flys</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>The Awakening</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>For Love of a Demon</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Bright Eyes</td><td>1972</td><td>Douglas Moench</td><td>Warren</td></tr>
+<tr><td>Going Home (Rip in Time #2)</td><td>1972</td><td>Corben</td><td>Funnybook</td></tr>
+<tr><td>Dome Battle (Den #5)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Bull Digger (Horror in the Dark #4)</td><td>1991</td><td>Corben</td><td>Fantagor</td></tr>
+<tr><td>Rats in the Walls (Skull #5)</td><td>1972</td><td>Lovecraft-Corben</td><td>Last Gasp</td></tr>
+<tr><td>Necromancer (Grim Wit #1)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Melton's Big Game (Slow Death #5)</td><td>1972</td><td>Corben</td><td>Last Gasp</td></tr>
+<tr><td>Flys (Hot Stuf' #1)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>The Awakening (Slow Death #4)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>For Love of a Demon (Fantagor #4)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Bright Eyes (Creepy #132)</td><td>1972</td><td>Douglas Moench</td><td>Warren</td></tr>
 <tr><td>Friedheim the Magnificent</td><td>1972</td><td>Greg Potter</td><td>Warren</td></tr>
 <tr><td>Bug</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Alice in Wonderlust</td><td>1973</td><td>Corben</td><td>Bud Plant</td></tr>
