--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -89,6 +89,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt63.jpg" title="Grim Wit #1, Rip Off (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt64.jpg" title="Fever Dreams #1, Rip Off (1972)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt65.jpg" title="Creepy #132, Warren (1972)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt66.jpg" title="Angouleme Art Festival (2019)"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -100,7 +101,7 @@ After working as a professional animator, Corben started doing underground comic
 </p><p>
 His stories appeared in Creepy, Eerie, Vampirella, 1984 and Comix International. He also colored several episodes of Will Eisner's Spirit. All the stories and covers he did for Creepy and Eerie have been reprinted by Dark Horse Books in a single volume: <a href="RichardCorbenArt9.jpg" title="Dark Horse (2012)">Creepy Presents Richard Corben</a>. The three stories he drew for Vampirella have been reprinted by Dynamite Entertainment in <a href="VampirellaArchives5.jpg">Vampirella Archives Vol. 5</a>.
 </p><p>
-In 1976 Richard illustrated "Bloodstar" published by The Morning Star Press. <a href="RichardCorbenArt12.jpg">Bloodstar</a> is the first graphic novel to call itself a graphic novel (in its introduction and dust jacket), it was based on a short story by Robert E. Howard, the creator of Conan the Barbarian.
+In 1976 Richard illustrated <a href="RichardCorbenArt12.jpg">Bloodstar</a> published by The Morning Star Press. Bloodstar is the first graphic novel to call itself a graphic novel (in its introduction and dust jacket), it was based on a short story by Robert E. Howard, the creator of Conan the Barbarian.
 </p><p>
 Corben did the cover of the debut studio album by American rock singer Meat Loaf called <a href="RichardCorbenArt2.jpg">Bat Out of Hell</a>. It is one of the best-selling albums of all time, having sold over 43 million copies worldwide.
 </p><p>
@@ -155,39 +156,39 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>The Awakening (Slow Death #4)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>For Love of a Demon (Fantagor #4)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Bright Eyes (Creepy #132)</td><td>1972</td><td>Douglas Moench</td><td>Warren</td></tr>
-<tr><td>Friedheim the Magnificent</td><td>1972</td><td>Greg Potter</td><td>Warren</td></tr>
-<tr><td>Bug</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Alice in Wonderlust</td><td>1973</td><td>Corben</td><td>Bud Plant</td></tr>
-<tr><td>Damsel in Dragon Dress</td><td>1973</td><td>Doug Moench</td><td>Fantagor Press</td></tr>
-<tr><td>Terror Tomb</td><td>1973</td><td>Corben</td><td>Warren</td></tr>
-<tr><td>Change into Something Comfortable</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
-<tr><td>Slipped Mickey</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
-<tr><td>Low Spark of High Heeled Noise</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
-<tr><td>Lycan klutz</td><td>1973</td><td>Corben</td><td>Warren</td></tr>
-<tr><td>Unprovoked attack on a Hilton Hotel</td><td>1974</td><td>Jim Stenstrum</td><td>Warren</td></tr>
-<tr><td>As Though They Were Living</td><td>1974</td><td>Gerry Boudreau</td><td>Warren</td></tr>
-<tr><td>Wizard Wagstaff</td><td>1974</td><td>Jack Butterworth</td><td>Warren</td></tr>
-<tr><td>Top to Bottom</td><td>1974</td><td>Jack Butterworth</td><td>Warren</td></tr>
-<tr><td>Woodlik Inheritance</td><td>1974</td><td>Corben</td><td>Warren</td></tr>
-<tr><td>Child</td><td>1974</td><td>Greg Potter</td><td>Warren</td></tr>
-<tr><td>Mind of the Mass</td><td>1974</td><td>Greg Potter</td><td>Warren</td></tr>
-<tr><td>Bless Us Father</td><td>1974</td><td>William DuBay</td><td>Warren</td></tr>
-<tr><td>The Hero Within</td><td>1974</td><td>Steven Skeates</td><td>Warren</td></tr>
-<tr><td>Childhoods End</td><td>1974</td><td>Potter</td><td>Warren</td></tr>
-<tr><td>Angel Shy of Hell</td><td>1974</td><td>Jim Stenstrum</td><td>Warren</td></tr>
-<tr><td>Pinball Wizard</td><td>1974</td><td>Douglas Moench</td><td>Warren</td></tr>
-<tr><td>The Raven</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
-<tr><td>Judas</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
-<tr><td>Demon in the Cockpit</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
-<tr><td>Forgive Us Our Trespasses</td><td>1975</td><td>William DuBay</td><td>Warren</td></tr>
-<tr><td>Bye, Bye Miss American Dream</td><td>1975</td><td>William DuBay</td><td>Warren</td></tr>
-<tr><td>Anti-Christmas</td><td>1975</td><td>Gerry Boudreau</td><td>Warren</td></tr>
-<tr><td>Oval Portrait</td><td>1975</td><td>Richard Margopoulos</td><td>Warren</td></tr>
-<tr><td>Shadow</td><td>1975</td><td>Richard Margopoulos</td><td>Warren</td></tr>
-<tr><td>Dweller in the Dark</td><td>1976</td><td>Herb Arnold</td><td>Sal Quartuccio</td></tr>
-<tr><td>Bowser</td><td>1976</td><td>Jan Strnad</td><td>Warren</td></tr>
-<tr><td>Within you Without you</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>The Believer</td><td>1976</td><td>Bud Lewis</td><td>Warren</td></tr>
+<tr><td>Friedheim the Magnificent (Creepy #46)</td><td>1972</td><td>Greg Potter</td><td>Warren</td></tr>
+<tr><td>Bug (Hot Stuf' #1)</td><td>1972</td><td>Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Alice in Wonderlust (Anomaly #4)</td><td>1973</td><td>Corben</td><td>Bud Plant</td></tr>
+<tr><td>Damsel in Dragon Dress (Grim Wit #2)</td><td>1973</td><td>Doug Moench</td><td>Fantagor Press</td></tr>
+<tr><td>Terror Tomb (Creepy #61)</td><td>1973</td><td>Corben</td><td>Warren</td></tr>
+<tr><td>Change into Something Comfortable (Creepy #58)</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
+<tr><td>Slipped Mickey (Creepy #54)</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
+<tr><td>Low Spark of High Heeled Noise (Creepy #57)</td><td>1973</td><td>Douglas Moench</td><td>Warren</td></tr>
+<tr><td>Lycanklutz (Creepy #56)</td><td>1973</td><td>Corben</td><td>Warren</td></tr>
+<tr><td>Unprovoked attack on a Hilton Hotel (Creepy #73)</td><td>1974</td><td>Jim Stenstrum</td><td>Warren</td></tr>
+<tr><td>As Though They Were Living (Vampirella #30)</td><td>1974</td><td>Gerry Boudreau</td><td>Warren</td></tr>
+<tr><td>Wizard Wagstaff (Eerie #56)</td><td>1974</td><td>Jack Butterworth</td><td>Warren</td></tr>
+<tr><td>Top to Bottom (Vampirella #33)</td><td>1974</td><td>Jack Butterworth</td><td>Warren</td></tr>
+<tr><td>Woodlik Inheritance (Vampirella #31)</td><td>1974</td><td>Corben</td><td>Warren</td></tr>
+<tr><td>Child (Eerie #57)</td><td>1974</td><td>Greg Potter</td><td>Warren</td></tr>
+<tr><td>Mind of the Mass (Eerie #58)</td><td>1974</td><td>Greg Potter</td><td>Warren</td></tr>
+<tr><td>Bless Us Father (Creepy #59)</td><td>1974</td><td>William DuBay</td><td>Warren</td></tr>
+<tr><td>The Hero Within (Creepy #60)</td><td>1974</td><td>Steven Skeates</td><td>Warren</td></tr>
+<tr><td>Childhoods End (Eerie #60)</td><td>1974</td><td>Potter</td><td>Warren</td></tr>
+<tr><td>Angel Shy of Hell (Creepy #64)</td><td>1974</td><td>Jim Stenstrum</td><td>Warren</td></tr>
+<tr><td>Pinball Wizard (Creepy #66)</td><td>1974</td><td>Douglas Moench</td><td>Warren</td></tr>
+<tr><td>The Raven (Creepy #67)</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
+<tr><td>Judas (Creepy #62)</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
+<tr><td>Demon in the Cockpit (Creepy #63)</td><td>1974</td><td>Richard Margopoulos</td><td>Warren</td></tr>
+<tr><td>Forgive Us Our Trespasses (Eerie #62)</td><td>1975</td><td>William DuBay</td><td>Warren</td></tr>
+<tr><td>Bye, Bye Miss American Dream (Eerie #64)</td><td>1975</td><td>William DuBay</td><td>Warren</td></tr>
+<tr><td>Anti-Christmas (Creepy #68)</td><td>1975</td><td>Gerry Boudreau</td><td>Warren</td></tr>
+<tr><td>Oval Portrait (Creepy #69)</td><td>1975</td><td>Richard Margopoulos</td><td>Warren</td></tr>
+<tr><td>Shadow (Creepy #70)</td><td>1975</td><td>Richard Margopoulos</td><td>Warren</td></tr>
+<tr><td>Dweller in the Dark (Hot Stuf' #3)</td><td>1976</td><td>Herb Arnold</td><td>Sal Quartuccio</td></tr>
+<tr><td>Bowser (Vampirella #54)</td><td>1976</td><td>Jan Strnad</td><td>Warren</td></tr>
+<tr><td>Within you Without you (Eerie #77)</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>The Believer (Creepy #77)</td><td>1976</td><td>Bud Lewis</td><td>Warren</td></tr>
 <tr><td>Mummy's Victory</td><td>1976</td><td>McKenzie</td><td>Warren</td></tr>
 <tr><td>Time and Time again</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>In Deep</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
