--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -189,21 +189,21 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Bowser (Vampirella #54)</td><td>1976</td><td>Jan Strnad</td><td>Warren</td></tr>
 <tr><td>Within you Without you (Eerie #77)</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>The Believer (Creepy #77)</td><td>1976</td><td>Bud Lewis</td><td>Warren</td></tr>
-<tr><td>Mummy's Victory</td><td>1976</td><td>McKenzie</td><td>Warren</td></tr>
-<tr><td>Time and Time again</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>In Deep</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>Bloodstar</td><td>1976</td><td>Corben/John Jakes</td><td>Morning Star Press</td></tr>
-<tr><td>Chard</td><td>1977</td><td>Herb Arnold</td><td>Sal Quartuccio</td></tr>
-<tr><td>Years and Mind Forever</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>You're A Big Girl Now</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>Instinct</td><td>1977</td><td>Nick Cuti</td><td>Warren</td></tr>
+<tr><td>Mummy's Victory (Creepy #84)</td><td>1976</td><td>McKenzie</td><td>Warren</td></tr>
+<tr><td>Time and Time again (Eerie #79)</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>In Deep (Creepy #83)</td><td>1976</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>Bloodstar (First Graphic Novel)</td><td>1976</td><td>Corben/John Jakes</td><td>Morning Star Press</td></tr>
+<tr><td>Chard (Hot Stuf' #5)</td><td>1977</td><td>Herb Arnold</td><td>Sal Quartuccio</td></tr>
+<tr><td>Years and Mind Forever (Eerie #87)</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>You're A Big Girl Now (Eerie #81)</td><td>1977</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>Instinct (Creepy #92)</td><td>1977</td><td>Nick Cuti</td><td>Warren</td></tr>
 <tr><td>The Odd Comic World of Richard Corben</td><td>1977</td><td>Corben</td><td>Warren</td></tr>
 <tr><td>NeverWhere</td><td>1978</td><td>Corben</td><td>Fantagor Press-HM</td></tr>
 <tr><td>New Tales of the Arabian Nights</td><td>1978</td><td>Jan Strnad</td><td>HM-Fantagor Press</td></tr>
-<tr><td>Woman Scorned</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
-<tr><td>Ogre</td><td>1978</td><td>Richard Corben</td><td>Warren</td></tr>
+<tr><td>Woman Scorned (Eerie #90)</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
+<tr><td>Ogre (Metal Hurlant #28)</td><td>1978</td><td>Richard Corben</td><td>Warren</td></tr>
 <tr><td>The Bodyssey</td><td>1979</td><td>John Pocsik</td><td>HM- Fantagor Press</td></tr>
-<tr><td>Blood's A Rover cover</td><td>1980</td><td>Harlan Ellison</td><td>Subterranean Press</td></tr>
+<tr><td>Blood's A Rover (cover)</td><td>1980</td><td>Harlan Ellison</td><td>Subterranean Press</td></tr>
 <tr><td>Jeremy Brood</td><td>1982</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Mutant World</td><td>1982</td><td>Jan Strnad</td><td>Warren-Fantagor Press</td></tr>
 <tr><td>Muvovum</td><td>1983</td><td>Corben</td><td>Fantagor Press-HM</td></tr>
@@ -252,33 +252,30 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Gone Fishin'</td><td>1995</td><td>Corben</td><td>Penthouse Comix</td></tr>
 <tr><td>Penthouse gags</td><td>1995</td><td>Corben</td><td>Penthouse Comix</td></tr>
 <tr><td>Ringworld</td><td>1995</td><td>Larry Niven- Corben</td><td>Omni Comix</td></tr>
-<tr><td>Aliens/Predator: War #0-4 cover</td><td>1995</td><td>(cover)</td><td>Dark Horse</td></tr>
+<tr><td>Aliens/Predator: War #0-4 (cover)</td><td>1995</td><td>(cover)</td><td>Dark Horse</td></tr>
 <tr><td>Batman Black/White</td><td>1996</td><td>Strnad</td><td>DC Comics</td></tr>
 <tr><td>Denz</td><td>1996</td><td>Jan Strnad</td><td>Penthouse Comix</td></tr>
 <tr><td>Web of Fear</td><td>1997</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
 <tr><td>Aliens: Alchemy #1-3</td><td>1997</td><td>John Arcudi</td><td>Dark Horse</td></tr>
 <tr><td>Gangland: Killer Smile</td><td>1997</td><td>John Pocsik</td><td>DC</td></tr>
 <tr><td>Heart Throb: Apposites Attract</td><td>1997</td><td>John Pocsik</td><td>DC</td></tr>
-<tr><td>Weird War cover</td><td>1997</td><td>Corben</td><td>DC</td></tr>
+<tr><td>Weird War (cover)</td><td>1997</td><td>Corben</td><td>DC</td></tr>
 <tr><td>Tower of Ho</td><td>1998</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
 <tr><td>The Surviver</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
 <tr><td>Killer Smile</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>C-23 cover5</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
-<tr><td>C-23 cover6</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
-<tr><td>C-23 cover7</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
-<tr><td>C-23 cover8</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
+<tr><td>C-23 (cover)</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
 <tr><td>Satanica</td><td>1998</td><td>Glenn Danzig</td><td>Verotic</td></tr>
-<tr><td>Marvel bookcover</td><td>1998</td><td>(cover)</td><td>Byron Preiss</td></tr>
-<tr><td>Vampire cover, 2 versions</td><td>1998</td><td>(cover)</td><td>Heavy Metal</td></tr>
+<tr><td>Marvel (cover)</td><td>1998</td><td>(cover)</td><td>Byron Preiss</td></tr>
+<tr><td>Vampire (cover), 2 versions</td><td>1998</td><td>(cover)</td><td>Heavy Metal</td></tr>
 <tr><td>M-80</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy: Forbidden Zone</td></tr>
 <tr><td>Angel of Andromeda</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy: Forbidden Zone</td></tr>
 <tr><td>Spear &amp; Fang</td><td>1998</td><td>Robert E Howard</td><td>Cross Plains</td></tr>
 <tr><td>Wolfgirl Eats</td><td>1999</td><td>Bruce Jones</td><td>D. C. Vertigo</td></tr>
 <tr><td>Apposites Attract</td><td>1999</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 1 cover</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 2 cover</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 3 cover</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 4 cover</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Congo Bill 1 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Congo Bill 2 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Congo Bill 3 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Congo Bill 4 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
 <tr><td>Grass Gator</td><td>1999</td></td><td>Corben</td><td>Jeff Williams</td></tr>
 <tr><td>Psychic Pilgrim cd</td><td>1999</td><td>Corben</td><td>Jeff Williams</td></tr>
 <tr><td>Hard Time</td><td>2000</td><td>Brian Azzarello</td><td>DC Vertigo</td></tr>
@@ -287,7 +284,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>BLUDD Webisodes</td><td>2000</td><td>Jan Strnad</td><td>BLUDD</td></tr>
 <tr><td>Girl &amp; Worm</td><td>2001</td><td>Corben</td><td>DC: FLINCH</td></tr>
 <tr><td>Banner</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
-<tr><td>The Crusades cover</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
+<tr><td>The Crusades (cover)</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
 <tr><td>Cyclops</td><td>2002</td><td>Corben</td><td>DC: SOLO</td></tr>
 <tr><td>The Plague</td><td>2002</td><td>Corben</td><td>DC: SOLO</td></tr>
 <tr><td>Interactive video</td><td>2002</td><td>Jeff Williams</td><td>DARKSTAR</td></tr>
@@ -298,7 +295,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Mask</td><td>2003</td><td>Mark Andreyko</td><td>Wildstorm</td></tr>
 <tr><td>Kings Crown</td><td>2003</td><td>Jim Alexander</td><td>Metal Hurlant</td></tr>
 <tr><td>Punisher: The End</td><td>2004</td><td>Garth Ennis</td><td>Marvel</td></tr>
-<tr><td>Metal Hurlant cover</td><td>2004</td><td>Corben</td><td>Metal Hurlant</td></tr>
+<tr><td>Metal Hurlant (cover)</td><td>2004</td><td>Corben</td><td>Metal Hurlant</td></tr>
 <tr><td>Swamp Thing</td><td>2004</td><td>(cover)</td><td>DC</td></tr>
 <tr><td>Bigfoot</td><td>2005</td><td>Zombie/Niles</td><td>IDW Publishing</td></tr>
 <tr><td>Swamp Thing</td><td>2005</td><td>(cover)</td><td>DC Vertigo</td></tr>
@@ -330,7 +327,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Hellboy in Mexico</td><td>2016</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Shadows on the Grave #1-8</td><td>2016</td><td>Corben</td><td>Dark Horse</td></tr>
 <tr><td>Conan Ancient Gods and Sorcerers</td><td>2017</td><td>Mignola</td><td>Dark Horse</td></tr>
-<tr><td>The Rook Archives Vol 3 cover</td><td>2017</td><td>(cover)</td><td>Dark Horse</td></tr>
+<tr><td>The Rook Archives Vol 3 (cover)</td><td>2017</td><td>(cover)</td><td>Dark Horse</td></tr>
 <tr><td>Hellboy and the BPRD: 1954</td><td>2018</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Shadows on the Grave</td><td>2018</td><td>Corben</td><td>Dark Horse</td></tr>
 
