--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -207,15 +207,15 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Jeremy Brood</td><td>1982</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Mutant World</td><td>1982</td><td>Jan Strnad</td><td>Warren-Fantagor Press</td></tr>
 <tr><td>Muvovum</td><td>1983</td><td>Corben</td><td>Fantagor Press-HM</td></tr>
-<tr><td>Roda and the Wolf</td><td>1984</td><td>Corben</td><td>Heavy Metal</td></tr>
-<tr><td>Fur Trade</td><td>1984</td><td>John Pocsik</td><td>Fantagor Press</td></tr>
-<tr><td>Infected</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
-<tr><td>Rex 'n' Me</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
+<tr><td>Roda and the Wolf (HM #83)</td><td>1984</td><td>Corben</td><td>Heavy Metal</td></tr>
+<tr><td>Fur Trade (Werewolf)</td><td>1984</td><td>John Pocsik</td><td>Fantagor Press</td></tr>
+<tr><td>Infected (Twisted Tales #1)</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
+<tr><td>Me an' Ol' Rex (Twisted Tales #3)</td><td>1984</td><td>Bruce Jones</td><td>Pacific</td></tr>
 <tr><td>Werewolf</td><td>1984</td><td>John Pocsik</td><td>Catalan</td></tr>
 <tr><td>TNMT #33</td><td>1984</td><td>Jan Strnad</td><td>Mirage Studios</td></tr>
-<tr><td>Night of the Monkey</td><td>1985</td><td>John Pocsik</td><td>Eclipse Comics</td></tr>
-<tr><td>X-men for Ethiopia</td><td>1985</td><td>Alan Moore</td><td>Marvel</td></tr>
-<tr><td>Spirit of the Beast</td><td>1985</td><td>Corben</td><td>Heavy Metal</td></tr>
+<tr><td>Night of the Monkey (Alien Encounters #5)</td><td>1985</td><td>John Pocsik</td><td>Eclipse Comics</td></tr>
+<tr><td>X-men Heros for Hope</td><td>1985</td><td>Alan Moore</td><td>Marvel</td></tr>
+<tr><td>Spirit of the Beast (HM #38)</td><td>1985</td><td>Corben</td><td>Heavy Metal</td></tr>
 <tr><td>Twisted Tales</td><td>1985</td><td>Bruce Jones</td><td>Pacific Comics</td></tr>
 <tr><td>Rip in Time</td><td>1986</td><td>Bruce Jones</td><td>Fantagor Press</td></tr>
 <tr><td>Children of Fire</td><td>1987</td><td>Corben</td><td>Fantagor Press</td></tr>
@@ -223,10 +223,10 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Den</td><td>1988</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Last Voyage of Sinbad</td><td>1988</td><td>Corben</td><td>Titan Books</td></tr>
 <tr><td>The Fall of the House of Usher</td><td>1989</td><td>Edgar Allan Poe</td><td>Pacific comics</td></tr>
-<tr><td>Such Pretty Little Toes</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
-<tr><td>Wreck of the Katera Dan</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
-<tr><td>Donneman's Bluff</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
-<tr><td>Slash and Burn</td><td>1989</td><td>Corben</td><td>Rip Off Press</td></tr>
+<tr><td>Such Pretty Little Toes (Den III #8)</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
+<tr><td>Wreck of the Katerra-Dan (Den III #9)</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
+<tr><td>Donneman's Bluff (Den III #10)</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
+<tr><td>Slash and Burn (Fire Sale)</td><td>1989</td><td>Corben</td><td>Rip Off Press</td></tr>
 <tr><td>The Juice Wagon</td><td>1990</td><td>Harlan Ellison</td><td>Dark Horse</td></tr>
 <tr><td>Son of Mutant World</td><td>1990</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Inducement</td><td>1990</td><td>Richard Morgopoulos</td><td>Fantagor Press</td></tr>
