--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -227,7 +227,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Wreck of the Katerra-Dan (Den III #9)</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Donneman's Bluff (Den III #10)</td><td>1989</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Slash and Burn (Fire Sale)</td><td>1989</td><td>Corben</td><td>Rip Off Press</td></tr>
-<tr><td>The Juice Wagon</td><td>1990</td><td>Harlan Ellison</td><td>Dark Horse</td></tr>
+<tr><td>The Man on the Juice Wagon (Dream Corridor)</td><td>1990</td><td>Harlan Ellison</td><td>Dark Horse</td></tr>
 <tr><td>Son of Mutant World</td><td>1990</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Inducement</td><td>1990</td><td>Richard Morgopoulos</td><td>Fantagor Press</td></tr>
 <tr><td>Different</td><td>1990</td><td>Bruce Jones</td><td>Fantagor Press</td></tr>
